--- a/삭제할거/로그인/html/login.html
+++ b/삭제할거/로그인/html/login.html
@@ -13,13 +13,13 @@
 
     <div class="wrapper">
         <div class="imagebox">
-            <img src="../css/메인 이미지.png" alt="">
+            <img src="../css/메인이미지2.png" alt="">
         </div>
         <div class="formbox">
-            <div class="logobox"><img src="../css/로고.png" alt=""></div>
+            <div class="logobox"><img src="../css/로고2.png" alt=""></div>
             <div class="inputbox">
-                <input type="text" placeholder="전화번호,사용자 이름 또는 이메일">
-                <input type="number" placeholder="비밀번호">
+                <input type="text" placeholder="  전화번호,사용자 이름 또는 이메일">
+                <input type="number" placeholder="  비밀번호">
                 <button>로그인</button>
             </div>
             <div class="divider"><span>또는</span></div>
