--- a/삭제할거/회원가입/html/join.html
+++ b/삭제할거/회원가입/html/join.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>회원가입</title>
     <link rel="stylesheet" href="../css/join.css">
-   
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
@@ -23,10 +23,16 @@
             <div class="policy">
                 저희 서비스를 이용하는 사람이 회원님의 연락처 정보를 BlahBlah에 업로드했을 수도 있습니다. 더 <a href="#">알아보기</a>
             </div>
-            <button type="submit" class="submit-btn"><a href="">가입</a></button>
+            <!-- <button type="submit" class="submit-btn"><a href="">가입</a></button> -->
+            <a href="javascript:void(0)" class="btn-3d" data-title="가 입"></a>
         </form>
         <div class="divider"></div>
-        <button class="login-btn2" ><a href="javascript:void(0)">이미 계정이 있으신가요?</a></button>
+        <button class="login-btn2"><a href="javascript:void(0)">이미 계정이 있으신가요?</a></button>
+
+        <script>
+
+        </script>
 
 </body>
+
 </html>
